src/test/ui/borrowck/issue-88434-minimal-example.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-88434-minimal-example.rs:10:5
   |
LL | const _CONST: &() = &f(&|_| {});
   |                      ---------- inside `_CONST` at $DIR/issue-88434-minimal-example.rs:4:22
...
LL |     panic!()
   |     ^^^^^^^^
   |     |
   |     the evaluated program panicked at 'explicit panic', $DIR/issue-88434-minimal-example.rs:10:5
   |     inside `f::<[closure@$DIR/issue-88434-minimal-example.rs:4:25: 4:31]>` at $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
